--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>My First Heading</h1>
+<h1>Hey there</h1>
 
-<p>My first paragraph.</p>
+<p>;)</p>
 
 </body>
 </html>
-
